pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-storage-gb
  namespace: enajusp-prd
spec:
  volumes:
    - name: disk01
      persistentVolumeClaim:
        claimName: moodle-eadsegen-premium
    - name: disk02
      persistentVolumeClaim:
        claimName: moodle-eadsegen-netapp
  containers:
    - name: nginx-storage-gb
      image: mcr.microsoft.com/oss/nginx/nginx:1.15.5-alpine
      resources:
        limits:
          memory: "1Gi"
        requests:
          memory: "1Gi"
      volumeMounts:
      - name: disk01
        mountPath: /mnt/azure
      - name: disk02
        mountPath: /mnt/azureapp
