pv_pvc_storageclass_usando_mesmo_fileshare.yaml
#criar um pod pra testar 
apiVersion: v1
kind: Pod
metadata:
  name: nginx-teste
  namespace: enajusp-prd
spec:
  volumes:
    - name: disk01
      persistentVolumeClaim:
        claimName: sga-pvc-teste
  containers:
    - name: nginx-teste
      image: nginx
      volumeMounts:
      - name: disk01
        mountPath: /mnt/azure
