samba_k8s.yaml

apiVersion: v1
kind: Pod
metadata:
  name: smb-pod
  namespace: db-apis-ms
spec:
  containers:
  - name: my-application
    image: ubuntu
    command: ["sleep", "infinity"]
    volumeMounts:
    - mountPath: "/mnt/data"
      name: smb-volume
  volumes:
  - name: smb-volume
    persistentVolumeClaim:
      claimName: pvc-smb
