service_loadbalancer_clusterip.yaml
#referencia: https://docs.microsoft.com/pt-br/azure/aks/internal-lb
# inserir a anotação service.beta.kubernetes.io/azure-load-balancer-internal: "true" é a dica para disponibilizar um ip do cluster ao inves de um ip privado.

apiVersion: v1
kind: Service
metadata:
  name: internal-app
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: internal-app
